# rust-esp32s3-lvgl-demo

./: Cargo.toml  README.md  bindings.h  sdkconfig.defaults
.github/workflows/: rust_ci.yml
lvgl-configs/: lv_conf.h  lv_drv_conf old.h
src/: lcd_panel.rs  main.rs
