[package]
name = "rust-esp32s3-lvgl-demo"
version = "0.1.0"
authors = ["enelson1001 <ednelson5080@gmail>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }

esp-idf-hal = { version = "0.42.1" }
esp-idf-sys = { version = "0.33.3" }

cstr_core = "0.2.1"
embedded-graphics-core = "0.4.0"

lvgl = { git = "https://github.com/enelson1001/lv_binding_rust", version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
] }

lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust", version = "0.6.2" }

[build-dependencies]
embuild = "0.31.3"

[package.metadata.esp-idf-sys]
extra_components = [{ bindings_header = "bindings.h" }]
